--- a/.github/issue-close-app.yml
+++ b/.github/issue-close-app.yml
@@ -4,14 +4,14 @@ issueConfigs:
 # There can be several configs for different kind of issues.
 - content:
 # Example 1: bug report
-  - "Expected Behavior"
-  - "Current Behavior"
+  - "Describe the bug"
   - "Steps to Reproduce"
-  - "Detailed Description"
+  - "Expected behavior"
+  - "Current behavior"  
 - content:
 # Example 2: feature request
-  - "Motivation / Use Case"
-  - "Expected Behavior"
-  - "Other Information"
+  - "Use Case"
+  - "Expected behavior"
+  - "Additional context"
 # The issue is judged to be legal if it includes all keywords from any of these two configs.
 # Or it will be closed by the app.
